# qt-qml-learning

WaterDashboard/: CMakeLists.txt  main.cpp
WaterDashboard/backend/: backend.cpp  backend.h  plantcontroller.cpp  plantcontroller.h
WaterDashboard/qml/: Dashboard.qml
WaterDashboard/qml/components/: StatusCard.qml  SymbolPump.qml
qt_qml_learning/: CMakeLists.txt  Pipe.qml  backend.cpp  backend.h  main.cpp
qtcrashcourse/: mainwindow.cpp  mainwindow.h  mainwindow.ui
